Выделение в модуль всех функций для работы с SVG

--- a/lab01.cbp
+++ b/lab01.cbp
@@ -32,6 +32,14 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="functions.cpp" />
+		<Unit filename="functions.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="functions_svg.cpp" />
+		<Unit filename="functions_svg.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="histogram.cpp" />
 		<Unit filename="histogram.h">
 			<Option target="&lt;{~None~}&gt;" />
