Получение имени компьютера под гистограммой

--- a/lab01.cbp
+++ b/lab01.cbp
@@ -31,11 +31,12 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add directory="curl/include" />
 		</Compiler>
-		<Unit filename="functions.cpp" />
-		<Unit filename="functions.h">
-			<Option target="&lt;{~None~}&gt;" />
-		</Unit>
+		<Linker>
+			<Add library="curl/lib/libcurl.dll.a" />
+			<Add directory="curl/lib" />
+		</Linker>
 		<Unit filename="functions_svg.cpp" />
 		<Unit filename="functions_svg.h">
 			<Option target="&lt;{~None~}&gt;" />
